Your commit message

--- a/pro1.html
+++ b/pro1.html
@@ -13,6 +13,34 @@
     padding: 0px;
     background: url('img/bg.jpg center no repeat');
 }
+
+
+
+body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}body{
+    margin: 0px;
+    padding: 0px;
+    background: url('img/bg.jpg center no repeat');
+}
 </style>
 <body>
     
